--- a/archives/toutiao-search/2024-03-21.md
+++ b/archives/toutiao-search/2024-03-21.md
@@ -1,45 +1,68 @@
 # 2024-03-21
 
-共 174 条
+共 196 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Mar 21 2024 12:00:36 GMT+0800 (China Standard Time) -->
-1. [女生戴录音器找开封王婆求姻缘被拒](https://so.toutiao.com/search?keyword=女生戴录音器找开封王婆求姻缘被拒)
-1. [许家印万亿“新衣”脱下之后](https://so.toutiao.com/search?keyword=许家印万亿“新衣”脱下之后)
-1. [各地经济发展“春暖花开”朝气蓬勃](https://so.toutiao.com/search?keyword=各地经济发展“春暖花开”朝气蓬勃)
+<!-- 最后更新时间 Thu Mar 21 2024 13:00:57 GMT+0800 (China Standard Time) -->
 1. [村干部埋水泥桩拦路报复村民](https://so.toutiao.com/search?keyword=村干部埋水泥桩拦路报复村民)
-1. [特朗普：请求各位能不能给我捐点钱](https://so.toutiao.com/search?keyword=特朗普：请求各位能不能给我捐点钱)
-1. [天蚕土豆要把张大仙写进小说](https://so.toutiao.com/search?keyword=天蚕土豆要把张大仙写进小说)
-1. [赵安吉溺亡时处于醉酒状态](https://so.toutiao.com/search?keyword=赵安吉溺亡时处于醉酒状态)
+1. [女子公开离婚：独自带俩娃有房贷](https://so.toutiao.com/search?keyword=女子公开离婚：独自带俩娃有房贷)
+1. [用课本封面的方式打开春耕画卷](https://so.toutiao.com/search?keyword=用课本封面的方式打开春耕画卷)
+1. [武氏映春出任越南国家代主席](https://so.toutiao.com/search?keyword=武氏映春出任越南国家代主席)
+1. [女生戴录音器找开封王婆求姻缘被拒](https://so.toutiao.com/search?keyword=女生戴录音器找开封王婆求姻缘被拒)
 1. [曲婉婷父女现身国外街头](https://so.toutiao.com/search?keyword=曲婉婷父女现身国外街头)
-1. [教育局回应老师训斥多名学生](https://so.toutiao.com/search?keyword=教育局回应老师训斥多名学生)
+1. [超25%的县全年未留置一名县管干部](https://so.toutiao.com/search?keyword=超25%的县全年未留置一名县管干部)
+1. [紫色版小米SU7闪现武汉大学](https://so.toutiao.com/search?keyword=紫色版小米SU7闪现武汉大学)
+1. [赵安吉溺亡时处于醉酒状态](https://so.toutiao.com/search?keyword=赵安吉溺亡时处于醉酒状态)
 1. [网传十大致癌卫生巾黑名单系AI造谣](https://so.toutiao.com/search?keyword=网传十大致癌卫生巾黑名单系AI造谣)
 1. [呼北高速14死车祸伤者家属发声](https://so.toutiao.com/search?keyword=呼北高速14死车祸伤者家属发声)
 1. [四川3名小孩玩耍时掉入化粪池离世](https://so.toutiao.com/search?keyword=四川3名小孩玩耍时掉入化粪池离世)
-1. [两名“内鬼”同日被通报逮捕](https://so.toutiao.com/search?keyword=两名“内鬼”同日被通报逮捕)
-1. [韩国瑜何时接“台湾民主基金会”](https://so.toutiao.com/search?keyword=韩国瑜何时接“台湾民主基金会”)
-1. [网友打赏千元看大尺度直播后报警](https://so.toutiao.com/search?keyword=网友打赏千元看大尺度直播后报警)
+1. [许家印万亿“新衣”脱下之后](https://so.toutiao.com/search?keyword=许家印万亿“新衣”脱下之后)
 1. [小孩哥背一书包“孤寡”回家](https://so.toutiao.com/search?keyword=小孩哥背一书包“孤寡”回家)
+1. [中国男足与新加坡队举行赛前发布会](https://so.toutiao.com/search?keyword=中国男足与新加坡队举行赛前发布会)
+1. [特朗普：请求各位能不能给我捐点钱](https://so.toutiao.com/search?keyword=特朗普：请求各位能不能给我捐点钱)
+1. [房价跌了23%为啥还是没人买](https://so.toutiao.com/search?keyword=房价跌了23%为啥还是没人买)
+1. [女孩投重疾险后患糖尿病被拒保](https://so.toutiao.com/search?keyword=女孩投重疾险后患糖尿病被拒保)
+1. [中国美债持仓重回8000亿美元以下](https://so.toutiao.com/search?keyword=中国美债持仓重回8000亿美元以下)
+1. [武汉一剧组因封路与居民发生争执](https://so.toutiao.com/search?keyword=武汉一剧组因封路与居民发生争执)
+1. [天蚕土豆要把张大仙写进小说](https://so.toutiao.com/search?keyword=天蚕土豆要把张大仙写进小说)
+1. [两名“内鬼”同日被通报逮捕](https://so.toutiao.com/search?keyword=两名“内鬼”同日被通报逮捕)
+1. [网友打赏千元看大尺度直播后报警](https://so.toutiao.com/search?keyword=网友打赏千元看大尺度直播后报警)
 1. [马光远：日本加息为什么震惊金融圈](https://so.toutiao.com/search?keyword=马光远：日本加息为什么震惊金融圈)
 1. [多人三亚潜水时被摘下面罩强行推销](https://so.toutiao.com/search?keyword=多人三亚潜水时被摘下面罩强行推销)
-1. [拉布拉多被训话 比熊幸灾乐祸转圈](https://so.toutiao.com/search?keyword=拉布拉多被训话+比熊幸灾乐祸转圈)
-1. [女子公开离婚：独自带俩娃有房贷](https://so.toutiao.com/search?keyword=女子公开离婚：独自带俩娃有房贷)
-1. [经济休克疗法满百天 阿根廷怎样了](https://so.toutiao.com/search?keyword=经济休克疗法满百天+阿根廷怎样了)
-1. [成都中考生存欺凌行为者最后投档](https://so.toutiao.com/search?keyword=成都中考生存欺凌行为者最后投档)
-1. [午评：A股早盘高开低走沪指跌0.21%](https://so.toutiao.com/search?keyword=午评：A股早盘高开低走沪指跌0.21%)
-1. [中国美债持仓重回8000亿美元以下](https://so.toutiao.com/search?keyword=中国美债持仓重回8000亿美元以下)
+1. [雷军展示小米SU7](https://so.toutiao.com/search?keyword=雷军展示小米SU7)
 1. [许家印被罚背后是购房者心酸史](https://so.toutiao.com/search?keyword=许家印被罚背后是购房者心酸史)
-1. [两地房贷利率回升引发热议](https://so.toutiao.com/search?keyword=两地房贷利率回升引发热议)
-1. [东航致132人遇难事故调查进展公布](https://so.toutiao.com/search?keyword=东航致132人遇难事故调查进展公布)
+1. [成都中考生存欺凌行为者最后投档](https://so.toutiao.com/search?keyword=成都中考生存欺凌行为者最后投档)
+1. [2名医学生先后自杀？校方回应](https://so.toutiao.com/search?keyword=2名医学生先后自杀？校方回应)
+1. [贾玲现身好莱坞片场](https://so.toutiao.com/search?keyword=贾玲现身好莱坞片场)
 1. [连任后将首访中国？普京微笑回应](https://so.toutiao.com/search?keyword=连任后将首访中国？普京微笑回应)
-1. [武汉一剧组封路与居民发生争执](https://so.toutiao.com/search?keyword=武汉一剧组封路与居民发生争执)
+1. [教育局回应老师训斥多名学生](https://so.toutiao.com/search?keyword=教育局回应老师训斥多名学生)
 1. [特朗普面临破产窘境](https://so.toutiao.com/search?keyword=特朗普面临破产窘境)
-1. [日本茨城南部发生5.3级地震](https://so.toutiao.com/search?keyword=日本茨城南部发生5.3级地震)
-1. [紫色版小米SU7闪现武汉大学](https://so.toutiao.com/search?keyword=紫色版小米SU7闪现武汉大学)
-1. [原“天上人间”老板覃辉在美认罪](https://so.toutiao.com/search?keyword=原“天上人间”老板覃辉在美认罪)
-1. [两所“985”大学会共享一位校长吗](https://so.toutiao.com/search?keyword=两所“985”大学会共享一位校长吗)
-1. [俄方：消灭乌境内法军“并非难事”](https://so.toutiao.com/search?keyword=俄方：消灭乌境内法军“并非难事”)
+1. [韩国医科大学8360名学生集体休学](https://so.toutiao.com/search?keyword=韩国医科大学8360名学生集体休学)
+1. [小车强行超车与对向车剧烈相撞](https://so.toutiao.com/search?keyword=小车强行超车与对向车剧烈相撞)
 1. [浙江一初中三男生同时被少年班录取](https://so.toutiao.com/search?keyword=浙江一初中三男生同时被少年班录取)
+1. [两所“985”大学会共享一位校长吗](https://so.toutiao.com/search?keyword=两所“985”大学会共享一位校长吗)
+1. [美国务院妄称藏南地区是印度一部分](https://so.toutiao.com/search?keyword=美国务院妄称藏南地区是印度一部分)
+1. [乌议员：马克龙态度坚决正考虑派兵](https://so.toutiao.com/search?keyword=乌议员：马克龙态度坚决正考虑派兵)
+1. [俄总统选举海外投票公布](https://so.toutiao.com/search?keyword=俄总统选举海外投票公布)
+1. [博主：鹊桥二号的任务非常科幻超前](https://so.toutiao.com/search?keyword=博主：鹊桥二号的任务非常科幻超前)
+1. [午评：A股早盘高开低走沪指跌0.21%](https://so.toutiao.com/search?keyword=午评：A股早盘高开低走沪指跌0.21%)
+1. [东航致132人遇难事故调查进展公布](https://so.toutiao.com/search?keyword=东航致132人遇难事故调查进展公布)
+1. [传比亚迪电子将进入苹果供应链](https://so.toutiao.com/search?keyword=传比亚迪电子将进入苹果供应链)
+1. [00后女大学生入伍调入海军陆战队](https://so.toutiao.com/search?keyword=00后女大学生入伍调入海军陆战队)
+1. [律师：许家印或被追究刑事责任](https://so.toutiao.com/search?keyword=律师：许家印或被追究刑事责任)
+1. [质询风波后三党民代全部提前到场](https://so.toutiao.com/search?keyword=质询风波后三党民代全部提前到场)
+1. [卢伟冰表示小米汽车会有点贵](https://so.toutiao.com/search?keyword=卢伟冰表示小米汽车会有点贵)
+1. [台学者：韩国瑜政治动作战略性十足](https://so.toutiao.com/search?keyword=台学者：韩国瑜政治动作战略性十足)
+1. [电视剧《三体》周年纪念版开播](https://so.toutiao.com/search?keyword=电视剧《三体》周年纪念版开播)
+1. [各地经济发展“春暖花开”朝气蓬勃](https://so.toutiao.com/search?keyword=各地经济发展“春暖花开”朝气蓬勃)
+1. [韩国瑜何时接“台湾民主基金会”](https://so.toutiao.com/search?keyword=韩国瑜何时接“台湾民主基金会”)
+1. [拉布拉多被训话 比熊幸灾乐祸转圈](https://so.toutiao.com/search?keyword=拉布拉多被训话+比熊幸灾乐祸转圈)
+1. [经济休克疗法满百天 阿根廷怎样了](https://so.toutiao.com/search?keyword=经济休克疗法满百天+阿根廷怎样了)
+1. [两地房贷利率回升引发热议](https://so.toutiao.com/search?keyword=两地房贷利率回升引发热议)
+1. [武汉一剧组封路与居民发生争执](https://so.toutiao.com/search?keyword=武汉一剧组封路与居民发生争执)
+1. [日本茨城南部发生5.3级地震](https://so.toutiao.com/search?keyword=日本茨城南部发生5.3级地震)
+1. [原“天上人间”老板覃辉在美认罪](https://so.toutiao.com/search?keyword=原“天上人间”老板覃辉在美认罪)
+1. [俄方：消灭乌境内法军“并非难事”](https://so.toutiao.com/search?keyword=俄方：消灭乌境内法军“并非难事”)
 1. [19岁救人溺亡小伙家属谢绝捐赠募捐](https://so.toutiao.com/search?keyword=19岁救人溺亡小伙家属谢绝捐赠募捐)
 1. [拼多多净利润率超LV母公司](https://so.toutiao.com/search?keyword=拼多多净利润率超LV母公司)
 1. [韩国瑜上任后靠两件事翻转形象](https://so.toutiao.com/search?keyword=韩国瑜上任后靠两件事翻转形象)
@@ -50,7 +73,6 @@
 1. [老北京四合院有讲究](https://so.toutiao.com/search?keyword=老北京四合院有讲究)
 1. [温州发布“上门按摩”服务规范标准](https://so.toutiao.com/search?keyword=温州发布“上门按摩”服务规范标准)
 1. [美军加速测试潜射高超导弹](https://so.toutiao.com/search?keyword=美军加速测试潜射高超导弹)
-1. [律师：许家印或被追究刑事责任](https://so.toutiao.com/search?keyword=律师：许家印或被追究刑事责任)
 1. [红旗EH7正式上市](https://so.toutiao.com/search?keyword=红旗EH7正式上市)
 1. [袁甲：李可不满有人迟到了不能开除](https://so.toutiao.com/search?keyword=袁甲：李可不满有人迟到了不能开除)
 1. [朱立伦批民进党的追杀已全面展开](https://so.toutiao.com/search?keyword=朱立伦批民进党的追杀已全面展开)
