--- a/archives/toutiao-search/2024-03-21.md
+++ b/archives/toutiao-search/2024-03-21.md
@@ -1,57 +1,73 @@
 # 2024-03-21
 
-共 215 条
+共 230 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Mar 21 2024 14:07:07 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Mar 21 2024 15:00:40 GMT+0800 (China Standard Time) -->
 1. [武氏映春出任越南国家代主席](https://so.toutiao.com/search?keyword=武氏映春出任越南国家代主席)
 1. [房价跌了23%为啥还是没人买](https://so.toutiao.com/search?keyword=房价跌了23%为啥还是没人买)
 1. [用课本封面的方式打开春耕画卷](https://so.toutiao.com/search?keyword=用课本封面的方式打开春耕画卷)
 1. [越南国家主席为何三年换了三个](https://so.toutiao.com/search?keyword=越南国家主席为何三年换了三个)
-1. [女生戴录音器找开封王婆求姻缘被拒](https://so.toutiao.com/search?keyword=女生戴录音器找开封王婆求姻缘被拒)
+1. [螺蛳粉塌房 被发现有增臭剂](https://so.toutiao.com/search?keyword=螺蛳粉塌房+被发现有增臭剂)
+1. [冷静期杀妻案择期宣判 男方不认罪](https://so.toutiao.com/search?keyword=冷静期杀妻案择期宣判+男方不认罪)
 1. [雷军展示小米SU7](https://so.toutiao.com/search?keyword=雷军展示小米SU7)
-1. [贾玲现身好莱坞片场](https://so.toutiao.com/search?keyword=贾玲现身好莱坞片场)
-1. [对13岁性侵者不予刑罚 困窘如何打破](https://so.toutiao.com/search?keyword=对13岁性侵者不予刑罚+困窘如何打破)
+1. [越南国家主席辞职背后浮出大案](https://so.toutiao.com/search?keyword=越南国家主席辞职背后浮出大案)
+1. [多人三亚潜水时被摘下面罩强行推销](https://so.toutiao.com/search?keyword=多人三亚潜水时被摘下面罩强行推销)
 1. [紫色版小米SU7闪现武汉大学](https://so.toutiao.com/search?keyword=紫色版小米SU7闪现武汉大学)
-1. [网传十大致癌卫生巾黑名单系AI造谣](https://so.toutiao.com/search?keyword=网传十大致癌卫生巾黑名单系AI造谣)
-1. [四川3名小孩玩耍时掉入化粪池离世](https://so.toutiao.com/search?keyword=四川3名小孩玩耍时掉入化粪池离世)
+1. [央媒：校园霸凌出现高危苗头](https://so.toutiao.com/search?keyword=央媒：校园霸凌出现高危苗头)
+1. [女生戴录音器找开封王婆求姻缘被拒](https://so.toutiao.com/search?keyword=女生戴录音器找开封王婆求姻缘被拒)
 1. [呼北高速14死车祸伤者家属发声](https://so.toutiao.com/search?keyword=呼北高速14死车祸伤者家属发声)
+1. [乘客坐地铁 一袋钱随意放地上](https://so.toutiao.com/search?keyword=乘客坐地铁+一袋钱随意放地上)
+1. [储殷：普京赢得大选释放三个信号](https://so.toutiao.com/search?keyword=储殷：普京赢得大选释放三个信号)
+1. [贾玲现身好莱坞片场](https://so.toutiao.com/search?keyword=贾玲现身好莱坞片场)
+1. [娃哈哈客服回应网店销量暴降](https://so.toutiao.com/search?keyword=娃哈哈客服回应网店销量暴降)
 1. [赵安吉溺亡时处于醉酒状态](https://so.toutiao.com/search?keyword=赵安吉溺亡时处于醉酒状态)
-1. [乌议员：马克龙态度坚决正考虑派兵](https://so.toutiao.com/search?keyword=乌议员：马克龙态度坚决正考虑派兵)
+1. [女孩投重疾险后患糖尿病被拒保](https://so.toutiao.com/search?keyword=女孩投重疾险后患糖尿病被拒保)
+1. [曝成龙剧组拍戏封路与居民起争执](https://so.toutiao.com/search?keyword=曝成龙剧组拍戏封路与居民起争执)
+1. [四川3名小孩玩耍时掉入化粪池离世](https://so.toutiao.com/search?keyword=四川3名小孩玩耍时掉入化粪池离世)
+1. [特朗普：请求各位能不能给我捐点钱](https://so.toutiao.com/search?keyword=特朗普：请求各位能不能给我捐点钱)
+1. [榆林一女中学生遭多名同学围殴](https://so.toutiao.com/search?keyword=榆林一女中学生遭多名同学围殴)
+1. [凤凰传奇4月20日济南演唱会取消](https://so.toutiao.com/search?keyword=凤凰传奇4月20日济南演唱会取消)
+1. [韩媒追问韩国“第一夫人”去哪儿了](https://so.toutiao.com/search?keyword=韩媒追问韩国“第一夫人”去哪儿了)
+1. [中国美债持仓重回8000亿美元以下](https://so.toutiao.com/search?keyword=中国美债持仓重回8000亿美元以下)
+1. [金价杀疯了 现在上车还来得及吗](https://so.toutiao.com/search?keyword=金价杀疯了+现在上车还来得及吗)
+1. [玲花回应凤凰传奇演唱会取消](https://so.toutiao.com/search?keyword=玲花回应凤凰传奇演唱会取消)
+1. [美军加速测试潜射高超导弹](https://so.toutiao.com/search?keyword=美军加速测试潜射高超导弹)
+1. [儿子运动步数为0 母亲报警救其一命](https://so.toutiao.com/search?keyword=儿子运动步数为0+母亲报警救其一命)
 1. [许家印万亿“新衣”脱下之后](https://so.toutiao.com/search?keyword=许家印万亿“新衣”脱下之后)
 1. [曲婉婷父女现身国外街头](https://so.toutiao.com/search?keyword=曲婉婷父女现身国外街头)
 1. [村干部埋水泥桩拦路报复村民](https://so.toutiao.com/search?keyword=村干部埋水泥桩拦路报复村民)
 1. [2名医学生先后自杀？校方回应](https://so.toutiao.com/search?keyword=2名医学生先后自杀？校方回应)
-1. [特朗普：请求各位能不能给我捐点钱](https://so.toutiao.com/search?keyword=特朗普：请求各位能不能给我捐点钱)
-1. [储殷：普京赢得大选释放三个信号](https://so.toutiao.com/search?keyword=储殷：普京赢得大选释放三个信号)
+1. [台退将谈台军将在金门实弹射击](https://so.toutiao.com/search?keyword=台退将谈台军将在金门实弹射击)
+1. [奈飞版《三体》剧集今日开播](https://so.toutiao.com/search?keyword=奈飞版《三体》剧集今日开播)
+1. [城管制止商贩 双方只动嘴不动手](https://so.toutiao.com/search?keyword=城管制止商贩+双方只动嘴不动手)
+1. [女子上班伸懒腰遇翻车](https://so.toutiao.com/search?keyword=女子上班伸懒腰遇翻车)
+1. [两名“内鬼”同日被通报逮捕](https://so.toutiao.com/search?keyword=两名“内鬼”同日被通报逮捕)
+1. [网友打赏千元看大尺度直播后报警](https://so.toutiao.com/search?keyword=网友打赏千元看大尺度直播后报警)
+1. [朝鲜新型高超音速导弹相关试验成功](https://so.toutiao.com/search?keyword=朝鲜新型高超音速导弹相关试验成功)
+1. [小孩哥背一书包“孤寡”回家](https://so.toutiao.com/search?keyword=小孩哥背一书包“孤寡”回家)
+1. [乌议员：马克龙态度坚决正考虑派兵](https://so.toutiao.com/search?keyword=乌议员：马克龙态度坚决正考虑派兵)
+1. [央行：法定存款准备金率有下降空间](https://so.toutiao.com/search?keyword=央行：法定存款准备金率有下降空间)
+1. [四川一住建局原局长疯狂受贿买房](https://so.toutiao.com/search?keyword=四川一住建局原局长疯狂受贿买房)
+1. [《欢乐颂5》何悯鸿被拉黑](https://so.toutiao.com/search?keyword=《欢乐颂5》何悯鸿被拉黑)
+1. [许家印被罚背后是购房者心酸史](https://so.toutiao.com/search?keyword=许家印被罚背后是购房者心酸史)
+1. [温州发布“上门按摩”服务规范标准](https://so.toutiao.com/search?keyword=温州发布“上门按摩”服务规范标准)
+1. [警方回应山东小钺钺被利器重伤](https://so.toutiao.com/search?keyword=警方回应山东小钺钺被利器重伤)
+1. [原阿里董事会主席张勇加入晨壹基金](https://so.toutiao.com/search?keyword=原阿里董事会主席张勇加入晨壹基金)
+1. [对13岁性侵者不予刑罚 困窘如何打破](https://so.toutiao.com/search?keyword=对13岁性侵者不予刑罚+困窘如何打破)
+1. [网传十大致癌卫生巾黑名单系AI造谣](https://so.toutiao.com/search?keyword=网传十大致癌卫生巾黑名单系AI造谣)
 1. [马克龙晒硬汉照：打沙袋表情凶狠](https://so.toutiao.com/search?keyword=马克龙晒硬汉照：打沙袋表情凶狠)
 1. [超25%的县全年未留置一名县管干部](https://so.toutiao.com/search?keyword=超25%的县全年未留置一名县管干部)
-1. [螺蛳粉塌房 被发现有增臭剂](https://so.toutiao.com/search?keyword=螺蛳粉塌房+被发现有增臭剂)
-1. [女孩投重疾险后患糖尿病被拒保](https://so.toutiao.com/search?keyword=女孩投重疾险后患糖尿病被拒保)
-1. [央媒：校园霸凌出现高危苗头](https://so.toutiao.com/search?keyword=央媒：校园霸凌出现高危苗头)
-1. [多人三亚潜水时被摘下面罩强行推销](https://so.toutiao.com/search?keyword=多人三亚潜水时被摘下面罩强行推销)
-1. [韩媒追问韩国“第一夫人”去哪儿了](https://so.toutiao.com/search?keyword=韩媒追问韩国“第一夫人”去哪儿了)
-1. [金价杀疯了 现在上车还来得及吗](https://so.toutiao.com/search?keyword=金价杀疯了+现在上车还来得及吗)
 1. [女子公开离婚：独自带俩娃有房贷](https://so.toutiao.com/search?keyword=女子公开离婚：独自带俩娃有房贷)
-1. [网友打赏千元看大尺度直播后报警](https://so.toutiao.com/search?keyword=网友打赏千元看大尺度直播后报警)
-1. [中国美债持仓重回8000亿美元以下](https://so.toutiao.com/search?keyword=中国美债持仓重回8000亿美元以下)
 1. [医生分享3个“不管不顾”睡眠法](https://so.toutiao.com/search?keyword=医生分享3个“不管不顾”睡眠法)
-1. [榆林一女中学生遭多名同学围殴](https://so.toutiao.com/search?keyword=榆林一女中学生遭多名同学围殴)
 1. [樊登：不快乐就是浪费时间](https://so.toutiao.com/search?keyword=樊登：不快乐就是浪费时间)
-1. [两名“内鬼”同日被通报逮捕](https://so.toutiao.com/search?keyword=两名“内鬼”同日被通报逮捕)
-1. [温州发布“上门按摩”服务规范标准](https://so.toutiao.com/search?keyword=温州发布“上门按摩”服务规范标准)
-1. [曝成龙剧组拍戏封路与居民起争执](https://so.toutiao.com/search?keyword=曝成龙剧组拍戏封路与居民起争执)
-1. [原阿里董事会主席张勇加入晨壹基金](https://so.toutiao.com/search?keyword=原阿里董事会主席张勇加入晨壹基金)
 1. [美军高官否认美军在金门常驻](https://so.toutiao.com/search?keyword=美军高官否认美军在金门常驻)
-1. [小孩哥背一书包“孤寡”回家](https://so.toutiao.com/search?keyword=小孩哥背一书包“孤寡”回家)
 1. [乌外长：从未要求外国向乌派兵](https://so.toutiao.com/search?keyword=乌外长：从未要求外国向乌派兵)
 1. [对付失眠小妙招](https://so.toutiao.com/search?keyword=对付失眠小妙招)
 1. [东航致132人遇难事故调查进展公布](https://so.toutiao.com/search?keyword=东航致132人遇难事故调查进展公布)
-1. [许家印被罚背后是购房者心酸史](https://so.toutiao.com/search?keyword=许家印被罚背后是购房者心酸史)
 1. [特朗普面临破产窘境](https://so.toutiao.com/search?keyword=特朗普面临破产窘境)
 1. [女子冷静期被丈夫当街杀害案开庭](https://so.toutiao.com/search?keyword=女子冷静期被丈夫当街杀害案开庭)
 1. [普京大踏步进入会场 台下掌声雷动](https://so.toutiao.com/search?keyword=普京大踏步进入会场+台下掌声雷动)
-1. [乘客坐地铁 一袋钱随意放地上](https://so.toutiao.com/search?keyword=乘客坐地铁+一袋钱随意放地上)
 1. [两所“985”大学会共享一位校长吗](https://so.toutiao.com/search?keyword=两所“985”大学会共享一位校长吗)
 1. [专家：可多用非药物方法治疗失眠](https://so.toutiao.com/search?keyword=专家：可多用非药物方法治疗失眠)
 1. [中国男足与新加坡队举行赛前发布会](https://so.toutiao.com/search?keyword=中国男足与新加坡队举行赛前发布会)
@@ -92,7 +108,6 @@
 1. [官方回应成都巨响](https://so.toutiao.com/search?keyword=官方回应成都巨响)
 1. [动画还原客车撞隧道致14死事故](https://so.toutiao.com/search?keyword=动画还原客车撞隧道致14死事故)
 1. [老北京四合院有讲究](https://so.toutiao.com/search?keyword=老北京四合院有讲究)
-1. [美军加速测试潜射高超导弹](https://so.toutiao.com/search?keyword=美军加速测试潜射高超导弹)
 1. [红旗EH7正式上市](https://so.toutiao.com/search?keyword=红旗EH7正式上市)
 1. [袁甲：李可不满有人迟到了不能开除](https://so.toutiao.com/search?keyword=袁甲：李可不满有人迟到了不能开除)
 1. [朱立伦批民进党的追杀已全面展开](https://so.toutiao.com/search?keyword=朱立伦批民进党的追杀已全面展开)
