--- a/archives/toutiao-search/2024-03-21.md
+++ b/archives/toutiao-search/2024-03-21.md
@@ -1,55 +1,75 @@
 # 2024-03-21
 
-共 243 条
+共 261 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Mar 21 2024 16:07:13 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Mar 21 2024 17:00:46 GMT+0800 (China Standard Time) -->
 1. [越南国家主席辞职背后浮出大案](https://so.toutiao.com/search?keyword=越南国家主席辞职背后浮出大案)
 1. [乌首都遭俄军数枚高超音速导弹袭击](https://so.toutiao.com/search?keyword=乌首都遭俄军数枚高超音速导弹袭击)
 1. [用课本封面的方式打开春耕画卷](https://so.toutiao.com/search?keyword=用课本封面的方式打开春耕画卷)
-1. [越南国家主席为何三年换了三个](https://so.toutiao.com/search?keyword=越南国家主席为何三年换了三个)
-1. [螺蛳粉塌房 被发现有增臭剂](https://so.toutiao.com/search?keyword=螺蛳粉塌房+被发现有增臭剂)
-1. [冷静期杀妻案择期宣判 男方不认罪](https://so.toutiao.com/search?keyword=冷静期杀妻案择期宣判+男方不认罪)
-1. [曲婉婷父女现身国外街头](https://so.toutiao.com/search?keyword=曲婉婷父女现身国外街头)
-1. [雷军展示小米SU7](https://so.toutiao.com/search?keyword=雷军展示小米SU7)
-1. [女生戴录音器找开封王婆求姻缘被拒](https://so.toutiao.com/search?keyword=女生戴录音器找开封王婆求姻缘被拒)
-1. [贾玲现身好莱坞片场](https://so.toutiao.com/search?keyword=贾玲现身好莱坞片场)
-1. [娃哈哈客服回应网店销量暴降](https://so.toutiao.com/search?keyword=娃哈哈客服回应网店销量暴降)
 1. [开封王婆说媒现场有多火](https://so.toutiao.com/search?keyword=开封王婆说媒现场有多火)
-1. [成都官方辟谣高中老师殴打学生](https://so.toutiao.com/search?keyword=成都官方辟谣高中老师殴打学生)
-1. [呼北高速14死车祸伤者家属发声](https://so.toutiao.com/search?keyword=呼北高速14死车祸伤者家属发声)
-1. [武氏映春出任越南国家代主席](https://so.toutiao.com/search?keyword=武氏映春出任越南国家代主席)
-1. [央媒：校园霸凌出现高危苗头](https://so.toutiao.com/search?keyword=央媒：校园霸凌出现高危苗头)
+1. [雷军展示小米SU7](https://so.toutiao.com/search?keyword=雷军展示小米SU7)
 1. [多人三亚潜水时被摘下面罩强行推销](https://so.toutiao.com/search?keyword=多人三亚潜水时被摘下面罩强行推销)
+1. [螺蛳粉塌房 被发现有增臭剂](https://so.toutiao.com/search?keyword=螺蛳粉塌房+被发现有增臭剂)
+1. [网友家凌晨四点被陌生男子拽门](https://so.toutiao.com/search?keyword=网友家凌晨四点被陌生男子拽门)
 1. [紫色版小米SU7闪现武汉大学](https://so.toutiao.com/search?keyword=紫色版小米SU7闪现武汉大学)
-1. [曝成龙剧组拍戏封路与居民起争执](https://so.toutiao.com/search?keyword=曝成龙剧组拍戏封路与居民起争执)
-1. [乘客坐地铁 一袋钱随意放地上](https://so.toutiao.com/search?keyword=乘客坐地铁+一袋钱随意放地上)
-1. [台退将谈台军将在金门实弹射击](https://so.toutiao.com/search?keyword=台退将谈台军将在金门实弹射击)
+1. [湖南一县政协主席嫖娼会受什么处分](https://so.toutiao.com/search?keyword=湖南一县政协主席嫖娼会受什么处分)
+1. [娃哈哈客服回应网店销量暴降](https://so.toutiao.com/search?keyword=娃哈哈客服回应网店销量暴降)
+1. [呼北高速14死车祸伤者家属发声](https://so.toutiao.com/search?keyword=呼北高速14死车祸伤者家属发声)
+1. [成都官方辟谣高中老师殴打学生](https://so.toutiao.com/search?keyword=成都官方辟谣高中老师殴打学生)
+1. [贾玲现身好莱坞片场](https://so.toutiao.com/search?keyword=贾玲现身好莱坞片场)
+1. [曲婉婷父女现身国外街头](https://so.toutiao.com/search?keyword=曲婉婷父女现身国外街头)
+1. [国足vs新加坡比分预测](https://so.toutiao.com/search?keyword=国足vs新加坡比分预测)
+1. [央媒：校园霸凌出现高危苗头](https://so.toutiao.com/search?keyword=央媒：校园霸凌出现高危苗头)
+1. [遇害学生父亲尸检反复念叨：儿啊别怕](https://so.toutiao.com/search?keyword=遇害学生父亲尸检反复念叨：儿啊别怕)
+1. [小杨哥鞠躬致歉梅菜扣肉事件](https://so.toutiao.com/search?keyword=小杨哥鞠躬致歉梅菜扣肉事件)
+1. [诈骗团伙将20元产品4980元卖给老人](https://so.toutiao.com/search?keyword=诈骗团伙将20元产品4980元卖给老人)
+1. [评论员谈覃辉3宗罪：在美输得剩裤衩](https://so.toutiao.com/search?keyword=评论员谈覃辉3宗罪：在美输得剩裤衩)
 1. [玲花回应凤凰传奇演唱会取消](https://so.toutiao.com/search?keyword=玲花回应凤凰传奇演唱会取消)
+1. [苹果新店赠品礼盒二手价卖到399元](https://so.toutiao.com/search?keyword=苹果新店赠品礼盒二手价卖到399元)
+1. [理想发布全员信反思MEGA问题](https://so.toutiao.com/search?keyword=理想发布全员信反思MEGA问题)
 1. [四川3名小孩玩耍时掉入化粪池离世](https://so.toutiao.com/search?keyword=四川3名小孩玩耍时掉入化粪池离世)
-1. [网友打赏千元看大尺度直播后报警](https://so.toutiao.com/search?keyword=网友打赏千元看大尺度直播后报警)
-1. [许家印万亿“新衣”脱下之后](https://so.toutiao.com/search?keyword=许家印万亿“新衣”脱下之后)
+1. [曝成龙剧组拍戏封路与居民起争执](https://so.toutiao.com/search?keyword=曝成龙剧组拍戏封路与居民起争执)
+1. [武氏映春出任越南国家代主席](https://so.toutiao.com/search?keyword=武氏映春出任越南国家代主席)
+1. [乘客坐地铁 一袋钱随意放地上](https://so.toutiao.com/search?keyword=乘客坐地铁+一袋钱随意放地上)
+1. [交通局回应公路中间建牌楼：会拆除](https://so.toutiao.com/search?keyword=交通局回应公路中间建牌楼：会拆除)
+1. [越南国家主席为何三年换了三个](https://so.toutiao.com/search?keyword=越南国家主席为何三年换了三个)
+1. [女生戴录音器找开封王婆求姻缘被拒](https://so.toutiao.com/search?keyword=女生戴录音器找开封王婆求姻缘被拒)
+1. [法媒谈马克龙硬汉照：让人想起普京](https://so.toutiao.com/search?keyword=法媒谈马克龙硬汉照：让人想起普京)
 1. [赵安吉溺亡时处于醉酒状态](https://so.toutiao.com/search?keyword=赵安吉溺亡时处于醉酒状态)
-1. [快船主帅：伦纳德手部情况良好](https://so.toutiao.com/search?keyword=快船主帅：伦纳德手部情况良好)
+1. [科尔谈库明加砍下26分](https://so.toutiao.com/search?keyword=科尔谈库明加砍下26分)
+1. [许家印万亿“新衣”脱下之后](https://so.toutiao.com/search?keyword=许家印万亿“新衣”脱下之后)
+1. [温州发布“上门按摩”服务规范标准](https://so.toutiao.com/search?keyword=温州发布“上门按摩”服务规范标准)
+1. [儿子运动步数为0 母亲报警救其一命](https://so.toutiao.com/search?keyword=儿子运动步数为0+母亲报警救其一命)
+1. [四川一住建局原局长疯狂受贿买房](https://so.toutiao.com/search?keyword=四川一住建局原局长疯狂受贿买房)
+1. [国足期待结果更期待场上变化](https://so.toutiao.com/search?keyword=国足期待结果更期待场上变化)
 1. [储殷：普京赢得大选释放三个信号](https://so.toutiao.com/search?keyword=储殷：普京赢得大选释放三个信号)
+1. [江西高速回应禁止特斯拉上高速](https://so.toutiao.com/search?keyword=江西高速回应禁止特斯拉上高速)
+1. [美联储对降息仍持谨慎态度](https://so.toutiao.com/search?keyword=美联储对降息仍持谨慎态度)
+1. [赵丽颖林更新拍与凤行大结局哭懵了](https://so.toutiao.com/search?keyword=赵丽颖林更新拍与凤行大结局哭懵了)
+1. [台退将谈台军将在金门实弹射击](https://so.toutiao.com/search?keyword=台退将谈台军将在金门实弹射击)
+1. [榆林一女中学生遭多名同学围殴](https://so.toutiao.com/search?keyword=榆林一女中学生遭多名同学围殴)
+1. [错过道口 小轿车实线变道酿车祸](https://so.toutiao.com/search?keyword=错过道口+小轿车实线变道酿车祸)
+1. [媒体：印尼新政府或全力拼经济](https://so.toutiao.com/search?keyword=媒体：印尼新政府或全力拼经济)
+1. [国足vs新加坡历史战绩：11胜3平2负](https://so.toutiao.com/search?keyword=国足vs新加坡历史战绩：11胜3平2负)
+1. [一睡眠障碍诊疗中心年门诊量破10万](https://so.toutiao.com/search?keyword=一睡眠障碍诊疗中心年门诊量破10万)
+1. [许家印被罚背后是购房者心酸史](https://so.toutiao.com/search?keyword=许家印被罚背后是购房者心酸史)
+1. [冷静期杀妻案择期宣判 男方不认罪](https://so.toutiao.com/search?keyword=冷静期杀妻案择期宣判+男方不认罪)
+1. [网友打赏千元看大尺度直播后报警](https://so.toutiao.com/search?keyword=网友打赏千元看大尺度直播后报警)
+1. [快船主帅：伦纳德手部情况良好](https://so.toutiao.com/search?keyword=快船主帅：伦纳德手部情况良好)
 1. [金价杀疯了 现在上车还来得及吗](https://so.toutiao.com/search?keyword=金价杀疯了+现在上车还来得及吗)
 1. [特朗普：请求各位能不能给我捐点钱](https://so.toutiao.com/search?keyword=特朗普：请求各位能不能给我捐点钱)
 1. [韩媒追问韩国“第一夫人”去哪儿了](https://so.toutiao.com/search?keyword=韩媒追问韩国“第一夫人”去哪儿了)
-1. [温州发布“上门按摩”服务规范标准](https://so.toutiao.com/search?keyword=温州发布“上门按摩”服务规范标准)
-1. [榆林一女中学生遭多名同学围殴](https://so.toutiao.com/search?keyword=榆林一女中学生遭多名同学围殴)
 1. [女孩投重疾险后患糖尿病被拒保](https://so.toutiao.com/search?keyword=女孩投重疾险后患糖尿病被拒保)
 1. [警方回应山东小钺钺被利器重伤](https://so.toutiao.com/search?keyword=警方回应山东小钺钺被利器重伤)
 1. [山东济南市政府原参事孙竹兮被查](https://so.toutiao.com/search?keyword=山东济南市政府原参事孙竹兮被查)
-1. [四川一住建局原局长疯狂受贿买房](https://so.toutiao.com/search?keyword=四川一住建局原局长疯狂受贿买房)
 1. [城管制止商贩 双方只动嘴不动手](https://so.toutiao.com/search?keyword=城管制止商贩+双方只动嘴不动手)
-1. [理想发布全员信反思MEGA问题](https://so.toutiao.com/search?keyword=理想发布全员信反思MEGA问题)
 1. [村干部埋水泥桩拦路报复村民](https://so.toutiao.com/search?keyword=村干部埋水泥桩拦路报复村民)
 1. [原阿里董事会主席张勇加入晨壹基金](https://so.toutiao.com/search?keyword=原阿里董事会主席张勇加入晨壹基金)
 1. [美军拟在菲律宾北部建港口意欲何为](https://so.toutiao.com/search?keyword=美军拟在菲律宾北部建港口意欲何为)
 1. [蔡英文为何不敢登太平岛](https://so.toutiao.com/search?keyword=蔡英文为何不敢登太平岛)
 1. [印尼新当选总统是何许人](https://so.toutiao.com/search?keyword=印尼新当选总统是何许人)
 1. [雷军：SU7标准版配置远超Model 3](https://so.toutiao.com/search?keyword=雷军：SU7标准版配置远超Model+3)
-1. [遇害学生父亲尸检反复念叨：儿啊别怕](https://so.toutiao.com/search?keyword=遇害学生父亲尸检反复念叨：儿啊别怕)
 1. [山西高速隧道车祸与疲劳驾驶有关吗](https://so.toutiao.com/search?keyword=山西高速隧道车祸与疲劳驾驶有关吗)
 1. [两名“内鬼”同日被通报逮捕](https://so.toutiao.com/search?keyword=两名“内鬼”同日被通报逮捕)
 1. [院士：良好睡眠可降低疾病发生率](https://so.toutiao.com/search?keyword=院士：良好睡眠可降低疾病发生率)
@@ -58,7 +78,6 @@
 1. [凤凰传奇4月20日济南演唱会取消](https://so.toutiao.com/search?keyword=凤凰传奇4月20日济南演唱会取消)
 1. [中国美债持仓重回8000亿美元以下](https://so.toutiao.com/search?keyword=中国美债持仓重回8000亿美元以下)
 1. [美军加速测试潜射高超导弹](https://so.toutiao.com/search?keyword=美军加速测试潜射高超导弹)
-1. [儿子运动步数为0 母亲报警救其一命](https://so.toutiao.com/search?keyword=儿子运动步数为0+母亲报警救其一命)
 1. [2名医学生先后自杀？校方回应](https://so.toutiao.com/search?keyword=2名医学生先后自杀？校方回应)
 1. [奈飞版《三体》剧集今日开播](https://so.toutiao.com/search?keyword=奈飞版《三体》剧集今日开播)
 1. [女子上班伸懒腰遇翻车](https://so.toutiao.com/search?keyword=女子上班伸懒腰遇翻车)
@@ -67,7 +86,6 @@
 1. [乌议员：马克龙态度坚决正考虑派兵](https://so.toutiao.com/search?keyword=乌议员：马克龙态度坚决正考虑派兵)
 1. [央行：法定存款准备金率有下降空间](https://so.toutiao.com/search?keyword=央行：法定存款准备金率有下降空间)
 1. [《欢乐颂5》何悯鸿被拉黑](https://so.toutiao.com/search?keyword=《欢乐颂5》何悯鸿被拉黑)
-1. [许家印被罚背后是购房者心酸史](https://so.toutiao.com/search?keyword=许家印被罚背后是购房者心酸史)
 1. [对13岁性侵者不予刑罚 困窘如何打破](https://so.toutiao.com/search?keyword=对13岁性侵者不予刑罚+困窘如何打破)
 1. [网传十大致癌卫生巾黑名单系AI造谣](https://so.toutiao.com/search?keyword=网传十大致癌卫生巾黑名单系AI造谣)
 1. [马克龙晒硬汉照：打沙袋表情凶狠](https://so.toutiao.com/search?keyword=马克龙晒硬汉照：打沙袋表情凶狠)
